# ocr-backfill-service

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.ocr.cpu-fast.yml  docker-compose.ocr.gpu-shadow.yml  docker-compose.ocr.gpu.yml  docker-compose.ocr.rapid.yml  docker-compose.ocr.yml  pyproject.toml  requirements-ocr-service-gpu-cu118.txt  requirements-ocr-service-rapid.txt  requirements-ocr-service.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
deploy/ocr-service/: Dockerfile  Dockerfile.gpu  Dockerfile.rapid
scripts/: package_ocr_service.sh
src/ocr_backfill/: __init__.py  cli.py  core.py  server.py
tests/: test_ocr_backfill.py
